Change overflow-y to auto to fix saved articles box

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ footer {
   transform: skew(-20deg);
 }
 
+
 /* The container <div> - needed to position the dropdown content */
 .dropup {
   position: relative;
@@ -108,7 +109,7 @@ footer {
 
 #saved-articles-list {
   max-height: 300px;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
